feat: Provide methods to delete documents and collections (#94)
* Provide methods to delete documents and collections

Chunks and extracts are managed by the system, so they don't need
explicit deletion endpoints - they're deleted whenever the document that
produced them is deleted.

* Comments & refactor

* Use cascade delete rather than doing it explicitly

* Comments and formatting
